welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (a+b-a-c==10 || a+b-b-c=10)
                        ^